<resources>
    <string name="app_name">Formulario de Alta</string>
    <string name="Nombre"> Nombre </string>
    <string name="Apellidos"> Apellidos</string>
    <string name="Edad"> Edad</string>
    <string name="etapaEd"> Etapa Educativa </string>
    <string name="Email">Email</string>
    <string name="selected_date_is">La fecha seleccionada es :</string>
    <string name="select_date">Selecciona una fecha</string>
    <string name="action_1">Modificar Datos</string>
    <string name="action_2">Confirmar Datos</string>
    <string name="content_description_media">perfil</string>
    <string name="cargar">Elegir imagen</string>
    <string name="grant_permission">Conceder permiso</string>
    <string name="yes">Conceder</string>
    <string name="no">Denegar</string>
    <string name="permission_required_text">Se requiere el permiso de:</string>
</resources>